--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 05:05:02 2018</p>
+         Last Run: Tue Nov 27 06:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,13 +32,13 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
-                        <td>-7</td>
+                        <td>-6</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>17</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>18</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>19</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
+                 "-6",
                  "-6",
                  "-7"
                ]
@@ -162,7 +162,7 @@
                "data":[
                  "4",
                  "4",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
                  "73",
+                 "74",
                  "79"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
-                 "18",
-                 "19"
+                 "19",
+                 "15",
+                 "13"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 05:05:02 2018</p>
+         Last Run: Tue Nov 27 06:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>38</td>
-                        <td>76</td>
+                        <td>24</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>93</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>20</td>
-                        <td>72</td>
+                        <td>7</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>92</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>21</td>
-                        <td>72</td>
+                        <td>8</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>92</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "38",
-                 "20",
-                 "21"
+                 "24",
+                 "7",
+                 "8"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "72",
-                 "72"
+                 "73",
+                 "70",
+                 "71"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
-                 "92",
-                 "92"
+                 "75",
+                 "71",
+                 "68"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 05:05:02 2018</p>
+         Last Run: Tue Nov 27 06:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -461,26 +461,26 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-4</td>
-                        <td>-7</td>
+                        <td>-5</td>
+                        <td>-8</td>
                         <td>7</td>
                         <td>77</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NNE</td>
-                        <td>76</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>7</td>
-                        <td>71</td>
-                        <td>0</td>
                         <td>6</td>
+                        <td>72</td>
+                        <td>0</td>
+                        <td>8</td>
                         <td>NE</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>55</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
+                 "-8",
                  "-7",
                  "-7"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-4",
                  "-4"
                ]
@@ -591,7 +591,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "7",
+                 "6",
                  "5"
                ]
              },
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "77",
-                 "71",
-                 "68"
+                 "72",
+                 "67"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
-                 "65",
-                 "55"
+                 "78",
+                 "66",
+                 "57"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 05:05:02 2018</p>
+         Last Run: Tue Nov 27 06:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,36 +678,36 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>4</td>
-                        <td>71</td>
+                        <td>3</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
-                        <td>4</td>
-                        <td>72</td>
+                        <td>-10</td>
+                        <td>-14</td>
+                        <td>3</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-11</td>
                         <td>-16</td>
-                        <td>4</td>
-                        <td>74</td>
+                        <td>3</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-14",
-                 "-16",
+                 "-14",
                  "-16"
                ]
              },
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-10",
-                 "-11",
+                 "-10",
                  "-11"
                ]
              }
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "3",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "72",
-                 "74"
+                 "73",
+                 "73",
+                 "75"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
-                 "17",
-                 "15"
+                 "19",
+                 "16",
+                 "14"
                ]
              }
            ]
