--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 07:05:02 2018</p>
+         Last Run: Tue Nov 27 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>20</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,7 +46,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>14</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "72",
                  "73",
-                 "74",
                  "79"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
+                 "21",
                  "16",
-                 "14"
+                 "13"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 07:05:02 2018</p>
+         Last Run: Tue Nov 27 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 07:05:02 2018</p>
+         Last Run: Tue Nov 27 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -468,7 +468,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>NNE</td>
-                        <td>78</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -479,8 +479,8 @@
                         <td>72</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NE</td>
-                        <td>66</td>
+                        <td>NNE</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NE</td>
-                        <td>56</td>
+                        <td>NNE</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -603,7 +603,7 @@
                "data":[
                  "77",
                  "72",
-                 "67"
+                 "68"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "66",
-                 "56"
+                 "77",
+                 "65",
+                 "55"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 07:05:02 2018</p>
+         Last Run: Tue Nov 27 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -682,14 +682,14 @@
                         <td>72</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>-11</td>
+                        <td>-16</td>
                         <td>3</td>
                         <td>73</td>
                         <td>0</td>
@@ -707,7 +707,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-14",
-                 "-14",
+                 "-16",
                  "-16"
                ]
              },
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-10",
-                 "-10",
+                 "-11",
                  "-11"
                ]
              }
@@ -829,7 +829,7 @@
                "data":[
                  "19",
                  "16",
-                 "14"
+                 "15"
                ]
              }
            ]
