--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 09:05:02 2018</p>
+         Last Run: Tue Nov 27 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,25 +32,25 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
-                        <td>-6</td>
+                        <td>-7</td>
                         <td>5</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
+                        <td>10</td>
+                        <td>W</td>
                         <td>9</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
-                        <td>-6</td>
+                        <td>-7</td>
                         <td>5</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>9</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>7</td>
+                        <td>W</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-6",
+                 "-7",
+                 "-7",
                  "-7"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "75",
-                 "79"
+                 "72",
+                 "74",
+                 "77"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "9",
-                 "9",
-                 "7"
+                 "10",
+                 "6"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 09:05:02 2018</p>
+         Last Run: Tue Nov 27 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>76</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>7</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>72</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "73",
-                 "70",
+                 "71",
                  "71"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
-                 "72",
-                 "69"
+                 "75",
+                 "71",
+                 "68"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 09:05:02 2018</p>
+         Last Run: Tue Nov 27 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -468,19 +468,19 @@
                         <td>0</td>
                         <td>6</td>
                         <td>NNE</td>
-                        <td>78</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>6</td>
+                        <td>7</td>
                         <td>72</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NE</td>
-                        <td>66</td>
+                        <td>NNE</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NE</td>
-                        <td>57</td>
+                        <td>NNE</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -591,7 +591,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "6",
+                 "7",
                  "5"
                ]
              },
@@ -603,7 +603,7 @@
                "data":[
                  "77",
                  "72",
-                 "67"
+                 "68"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "66",
-                 "57"
+                 "77",
+                 "64",
+                 "53"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 09:05:02 2018</p>
+         Last Run: Tue Nov 27 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,36 +678,36 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>3</td>
-                        <td>73</td>
+                        <td>4</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
-                        <td>3</td>
+                        <td>-11</td>
+                        <td>-16</td>
+                        <td>4</td>
                         <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-11</td>
                         <td>-16</td>
-                        <td>3</td>
+                        <td>4</td>
                         <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-14",
-                 "-14",
+                 "-16",
                  "-16"
                ]
              },
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-10",
-                 "-10",
+                 "-11",
                  "-11"
                ]
              }
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "3"
+                 "4",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
+                 "72",
                  "73",
                  "75"
                ]
@@ -828,8 +828,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "19",
-                 "16",
-                 "14"
+                 "17",
+                 "15"
                ]
              }
            ]
